fix : api fix, feat: cityName

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <label for="city">CITY:</label>
     <input type="text" placeholder="enter your city"> <br>
     <button type="submit">SUBMIT</button>
+    <div id="name"></div>
     <div id="temperature"></div>
     <div id="weather"></div>
     <script src="app.js"></script>
