--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>WEATHER APP</h1>
-    <label for="city">CITY:</label>
-    <input type="text" placeholder="enter your city"> <br>
-    <button type="submit">SUBMIT</button>
-    <div id="name"></div>
-    <div id="temperature"></div>
-    <div id="weather"></div>
+    <div class="card">
+        <h1>WEATHER APP</h1>
+        <label for="city">CITY:</label>
+        <input type="text" placeholder="enter your city"> <br>
+        <button type="submit">SUBMIT</button>
+        <div id="name"></div>
+        <div id="temperature"></div>
+        <div id="weather"></div>
+        <i></i>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
