style and feat:icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Check your WEATHER</h1>
     <div class="card">
         <h1>WEATHER APP</h1>
         <label for="city">CITY:</label>
@@ -15,8 +16,9 @@
         <div id="name"></div>
         <div id="temperature"></div>
         <div id="weather"></div>
-        <i></i>
+        <img >
     </div>
+    <footer>Made with ❤️❤️ bt <a href="https://sumitmehra-portifolio.netlify.app/">SUMIT MEHRA</a> <br>©SUMIT MEHRA,2021</footer>
     <script src="app.js"></script>
 </body>
 </html>
