--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Check your WEATHER</h1>
+    <h1>BREEEZE <br> <span>weather app</span></h1>
     <div class="card">
-        <h1>WEATHER APP</h1>
+        <h2>BREEEZE</h2>
         <label for="city">CITY:</label>
         <input type="text" placeholder="enter your city"> <br>
         <button type="submit">SUBMIT</button>
